# m3meka

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  Makefile.am~  Makefile.in  README  README.md  aclocal.m4  config.status  configure  configure.ac  libtool  setup.bash.in
python/: CMakeLists.txt  Makefile  Makefile.am  Makefile.am~  Makefile.in  setup.py.in
python/m3/: actuator.py  head_s2csp_ctrl.py  humanoid.py  humanoid.py~  joint.py  joint_array_mode_pb2.py  joint_mode_ros_pb2.py  joint_pb2.py  ledx2xn_ec_shm_pb2.py  m3meka_factory_proxy.py  m3recorder.py  omnibase_pb2.py  omnibase_shm_pb2.py  toolbox.py  toolbox_head_s2.py
python/m3qa/: calibrate.py
python/scripts/: CMakeLists.txt
python/scripts/demo/: m3_demo_arm_a2r4.py  m3_demo_arm_a2r5.py  m3_demo_arm_korg.py  m3_demo_arm_velocity_control.py  m3_demo_hand_h2r5.py  m3_demo_head_s2r2_cart.py  m3_demo_hold_pose.py~  m3_demo_ik_delta.py~
python/scripts/dev/: m3dev_joint_tuning.py  m3dev_proxy_speed_test_send_bot_cmd.py
src/apps/m3humanoid_shm_test/: Makefile  Makefile.am  Makefile.in  m3humanoid_shm_test  m3humanoid_shm_test.cpp
src/apps/m3humanoid_shm_test-ens/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  m3humanoid_shm_test  m3humanoid_shm_test.cpp  m3humanoid_shm_test.cpp~
src/apps/m3humanoid_shm_test-ens/.deps/: m3humanoid_shm_test.Po
src/apps/m3humanoid_shm_test/.deps/: m3humanoid_shm_test.Po
src/m3/: CMakeLists.txt
src/m3/chains/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  dynamatics.cpp  dynamatics.h  dynamatics.pb.cpp  dynamatics.pb.h  hand_ua.cpp  hand_ua.pb.cpp  hand_ua.pb.h  head.cpp  joint_array.cpp  joint_array.pb.cpp  joint_array.pb.h  joint_array_mode.pb.cpp  joint_array_mode.pb.h  joint_array_mode.proto  joint_array_mode.proto~  joint_chain.cpp  libm3chains.la  libm3chains_la-arm.lo  libm3chains_la-dynamatics.lo  libm3chains_la-dynamatics.pb.lo  libm3chains_la-factory_proxy.lo  libm3chains_la-gripper.lo  libm3chains_la-hand.lo  libm3chains_la-hand_ua.lo  libm3chains_la-hand_ua.pb.lo  libm3chains_la-head.lo  libm3chains_la-joint_array.lo  libm3chains_la-joint_array.pb.lo  libm3chains_la-joint_array_mode.pb.lo  libm3chains_la-joint_chain.lo  libm3chains_la-torso.lo
src/m3/chains/.deps/: libm3chains_la-arm.Plo  libm3chains_la-dynamatics.Plo  libm3chains_la-dynamatics.pb.Plo  libm3chains_la-factory_proxy.Plo  libm3chains_la-gripper.Plo  libm3chains_la-hand.Plo  libm3chains_la-hand_ua.Plo  libm3chains_la-hand_ua.pb.Plo  libm3chains_la-head.Plo  libm3chains_la-joint_array.Plo  libm3chains_la-joint_array.pb.Plo  libm3chains_la-joint_array_mode.pb.Plo  libm3chains_la-joint_chain.Plo  libm3chains_la-torso.Plo
src/m3/chains/.libs/: libm3chains.la  libm3chains.lai  (+2 more)
src/m3/hardware/: CMakeLists.txt  Makefile  Makefile.am  Makefile.am~  Makefile.in  actuator.cpp  actuator.cpp~  actuator.h  actuator.pb.cpp  actuator.pb.h  actuator.proto  actuator_ec.cpp  actuator_ec.pb.cpp  actuator_ec.pb.h  actuator_virtual.cpp  actuator_virtual.h  async_io.cpp  ctrl_simple.cpp  ctrl_simple.h  ctrl_simple.pb.cpp  ctrl_simple.pb.h  factory_proxy.cpp  factory_proxy.cpp~  joint.cpp  joint.cpp~  joint.h~  joint.pb.cpp  joint.pb.h  joint.proto  joint.proto~  joint_mode_ros.pb.cpp  joint_mode_ros.pb.h  joint_mode_ros.proto~  joint_slave.cpp  joint_virtual.cpp  joint_zlift.cpp  joint_zlift.h  joint_zlift_shm.cpp  joint_zlift_shm.h  joint_zlift_shm.pb.cpp  (+101 more)
src/m3/inverse_kine/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  _ik_a1r1_left.la  _ik_a1r1_left_la-ik_a1r1_left_wrap.lo  _ik_a1r1_right.la  _ik_a1r1_right_la-ik_a1r1_right_wrap.lo  _ik_a2r1_left.la  _ik_a2r1_left_la-ik_a2r1_left_wrap.lo  _ik_a2r1_right.la  _ik_a2r1_right_la-ik_a2r1_right_wrap.lo  _ik_a2r2_left.la  _ik_a2r2_left_la-ik_a2r2_left_wrap.lo  _ik_a2r2_right.la  _ik_a2r2_right_la-ik_a2r2_right_wrap.lo  ens.dae  ik_a1r1_left.py  ik_a1r1_right.py  ik_a2r1_left.py  ik_a2r1_right.py  ik_a2r2_left.py  ik_a2r2_right.py
src/m3/robot_ctrl/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  head_s2csp_ctrl.cpp  libm3robot_ctrl.la  libm3robot_ctrl_la-factory_proxy.lo  libm3robot_ctrl_la-head_s2csp_ctrl.lo  libm3robot_ctrl_la-head_s2csp_ctrl.pb.lo
src/m3/robots/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  chain_name.h~  factory_proxy.cpp  haptic_demo.cpp  humanoid.cpp  humanoid.cpp~  humanoid.h  humanoid.h~  humanoid.proto  humanoid_shm.cpp  humanoid_shm.cpp~  humanoid_shm.h~  humanoid_shm_sds.h  humanoid_shm_sds.h~  libm3robots.la  libm3robots_la-factory_proxy.lo  libm3robots_la-haptic_demo.lo  libm3robots_la-haptic_demo.pb.lo  libm3robots_la-humanoid.lo  libm3robots_la-humanoid.pb.lo  libm3robots_la-humanoid_shm.lo  libm3robots_la-humanoid_shm.pb.lo  libm3robots_la-robot.lo  robot.cpp
src/m3/shared_mem/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  comp_shm.cpp  comp_shm.h  libm3shm.la  libm3shm_la-comp_shm.lo  libm3shm_la-factory_proxy.lo  libm3shm_la-torque_shm.lo  libm3shm_la-torque_shm.pb.lo  torque_shm.cpp  torque_shm.pb.cpp  torque_shm.pb.h
src/m3/toolbox/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  dfilter.cpp  dfilter.h  libm3toolbox.la  libm3toolbox_la-dfilter.lo  libm3toolbox_la-factory_proxy.lo  libm3toolbox_la-log.lo  libm3toolbox_la-log.pb.lo  libm3toolbox_la-monitor.lo  libm3toolbox_la-serial_pdo.lo  libm3toolbox_la-serial_port.lo  libm3toolbox_la-toolbox.lo  libm3toolbox_la-trajectory.lo  libm3toolbox_la-trajectory.pb.lo  log.cpp  log.pb.cpp  log.pb.h  serial_port.h  toolbox.h  trajectory.cpp  trajectory.h  trajectory.pb.cpp  trajectory.pb.h
src/m3/vehicles/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  factory_proxy.cpp  libm3vehicles.la  libm3vehicles_la-factory_proxy.lo  libm3vehicles_la-omnibase.lo  libm3vehicles_la-omnibase.pb.lo  libm3vehicles_la-omnibase_shm.lo  libm3vehicles_la-omnibase_shm.pb.lo  libm3vehicles_la-vehicle.lo  omnibase.cpp  omnibase.cpp~  omnibase.h  omnibase.h~  omnibase.pb.cpp  omnibase.pb.h  omnibase.proto~  omnibase_shm.cpp  omnibase_shm.cpp~  omnibase_shm.pb.cpp  omnibase_shm.pb.h  omnibase_shm_sds.h  omnibase_shm_sds.h~
(+267 files in other folders)
