cmake_minimum_required(VERSION 2.8.3)
project(m3humanoid_shm_test-ens)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
find_package(Threads REQUIRED)
find_package(Eigen2 REQUIRED)
find_package(RTAI REQUIRED)
find_package(M3 COMPONENTS HARDWARE ROBOTS CHAINS TOOLBOX SHARED_MEM REQUIRED)
find_package(M3rt REQUIRED)
find_package(YamlCpp REQUIRED)
include_directories(${M3RT_INCLUDE_DIR} ${RTAI_INCLUDE_DIR} ${M3_INCLUDE_DIR} ${EIGEN2_INCLUDE_DIR} ${THREADS_INCLUDE_DIR} ${YAMLCPP_INCLUDE_DIR} )
add_executable(m3humanoid_shm_test m3humanoid_shm_test.cpp)
target_link_libraries(m3humanoid_shm_test ${EIGEN2_LIBRARIES} ${RTAI_LIBRARIES} ${M3_LIBRARIES} ${M3RT_LIBRARIES} pthread ${YAMLCPP_LIBRARIES} ${CMAKE_DL_LIBS} )

